@@ -1,3 +1,6 @@
+3 November 2024
+Added test in `for' loop.
+
 1 November 2024
 Changed &apos; to &#39; in toML function, since &apos; is not a valid HTML
 entity.
